# openeuler-kiran-control-panel

./: CMakeLists.txt  README.md  config.h.in
data/: CMakeLists.txt  com.kylinsec.kiran.control-panel.plugin.gschema.xml
example/kiran-cpanel-demo/: CMakeLists.txt
launcher/: CMakeLists.txt  main.cpp
launcher/src/: main.cpp
launcher/translations/: kiran-cpanel-launcher.bo_CN.ts  kiran-cpanel-launcher.zh_CN.ts
lib/common-widgets/: CMakeLists.txt  common-widgets.cpp
lib/common-widgets/animation-push-button/: animation-push-button.cpp
lib/dbus-wrapper/: CMakeLists.txt  account.cpp  account.h  appearance.cpp  appearance.h  dbus-warpper.cpp
lib/plugin-framework/: CMakeLists.txt  category-manager.cpp  category-manager.h  plugin-loader.cpp  plugin-loader.h  plugin-manager.cpp  plugin-manager.h  plugin-prefs.cpp  plugin-prefs.h  plugin-v2.cpp  plugin-v2.h
plugins/: CMakeLists.txt
plugins/account/: CMakeLists.txt  account-plugin.cpp  account-plugin.h  account-subitem.h  account-widget.cpp  accounts-global-info.cpp  accounts-global-info.h
plugins/account/pages/create-user-page/: create-user-page.cpp
plugins/account/pages/passwd-expiration-policy/: password-expiration-policy-page.cpp  password-expiration-policy-page.h
plugins/account/pages/select-avatar-page/: select-avatar-page.cpp
plugins/account/pages/user-info-page/: user-info-page.cpp  user-info-page.ui
plugins/account/utils/: avatar-editor-wrapper.cpp  hard-worker.cpp  passwd-helper.cpp
plugins/appearance/: CMakeLists.txt  appearance-global-info.cpp  appearance-global-info.h  appearance-plugin.cpp
plugins/appearance/pages/font/: fonts.cpp
plugins/appearance/pages/screensaver/: screensaver-page.cpp
plugins/appearance/pages/theme/: theme-page.cpp
plugins/appearance/pages/theme/cursor/: cursor-theme-page.cpp  cursor-theme-page.h
plugins/appearance/pages/theme/icon/: icon-theme-page.cpp  icon-theme-page.h
plugins/appearance/pages/theme/wm/: decoration-config.cpp  decoration-config.h  decoration-def.h  decoration-preview-widget.cpp  decoration-preview-widget.h  preview-bridge.cpp  preview-bridge.h  preview-client.cpp  preview-client.h  preview-item.cpp  preview-item.h  preview-palette.cpp  preview-palette.h  preview-settings.cpp  preview-settings.h  wm-theme-page.cpp  wm-theme-page.h
plugins/appearance/utils/: exclusion-group.cpp  exclusion-group.h  theme-preview.cpp  theme-preview.h
plugins/application/: CMakeLists.txt  application-plugin.cpp  application-plugin.h
plugins/application/autostart/: autostart-page.cpp
plugins/application/defaultapp/: defaultapp.cpp  defaultapp.h
plugins/audio/plugin/: audio-plugin.cpp  input-page.cpp  output-page.cpp
plugins/authentication/: CMakeLists.txt  auth-plugin.cpp  auth-plugin.h  checkpasswd-dialog.cpp  checkpasswd-dialog.h
plugins/authentication/pages/: prefs-page.cpp  ukey-page.cpp
plugins/authentication/utils/: general-bio-page.cpp
plugins/display/: CMakeLists.txt
plugins/display/src/: device-panel-item.h  device-panel-widget.cpp  device-panel.cpp  device-panel.h  display-config.cpp  display-page.cpp  display-page.h  display-plugin.cpp  display-plugin.h
plugins/group/: CMakeLists.txt
plugins/group/data/: com.kylinsec.Kiran.SystemDaemon.Groups.Group.xml  com.kylinsec.Kiran.SystemDaemon.Groups.xml
plugins/group/src/: accounts-global-info.h  group-interface.cpp  group-interface.h  group-manager.cpp  group-manager.h  group-page.cpp  group-page.h  group-plugin.cpp  group-plugin.h
plugins/group/src/pages/add-users-page/: add-users-page.cpp  add-users-page.h
plugins/group/src/pages/create-group-page/: create-group-page.cpp  create-group-page.h
plugins/group/translations/: kiran-cpanel-group.zh_CN.ts
plugins/keybinding/: CMakeLists.txt  keybinding-plugin.cpp  keybinding-plugin.h  shortcut.cpp  shortcut.h
plugins/keybinding/utils/: custom-line-edit.cpp  custom-line-edit.h  keybinding_def.h  keycode-helper.cpp  keycode-helper.h  keycode-translator.cpp  keycode-translator.h
plugins/keyboard/: CMakeLists.txt  keyboard-plugin.cpp  keyboard-plugin.h
plugins/mouse/: CMakeLists.txt  mouse-plugin.cpp  mouse-plugin.h
plugins/network/: CMakeLists.txt  network-plugin.cpp
plugins/network/pages/ethernet/: ip-settings-widget.cpp  wired-device-widget.cpp  wired-device-widget.h
plugins/network/pages/vpn/: vpn-page.cpp
plugins/network/pages/wireless/: wireless-device-widget.cpp  wireless-device-widget.h
plugins/network/widgets/: connection-indicator.cpp  connection-item.cpp  wireless-dialog.cpp  wireless-dialog.h
plugins/power/: CMakeLists.txt  power-plugin.cpp  power-plugin.h
plugins/power/pages/: general-settings-page.cpp  general-settings-page.h  general-settings-page.ui
plugins/system/: CMakeLists.txt  systeminfo-plugin.cpp  systeminfo-plugin.h
plugins/system/dbus-wrapper/: system-info-dbus.cpp  system-info-dbus.h
plugins/system/pages/system-information/: change-host-name-widget.cpp  change-host-name-widget.h  change-host-name-widget.ui  license-agreement.cpp  license-agreement.h  system-information.cpp  system-information.h
plugins/timedate/: CMakeLists.txt  timedate-plugin.cpp
plugins/upgrade/: CMakeLists.txt  def.h  deps-dialog.cpp  deps-dialog.h  deps-dialog.ui  history-dialog.cpp  history-dialog.h  message-dialog.cpp  message-dialog.h  upgrade-interface.cpp  upgrade-interface.h  upgrade-page.cpp  upgrade-page.h  upgrade-page.ui  upgrade-plugin.cpp  upgrade-plugin.h  upgrade-subitem.cpp  upgrade-subitem.h
plugins/upgrade/data/: com.kylinsec.Kiran.SystemDaemon.Upgrade.xml
plugins/upgrade/widgets/: custom-header-view.cpp  custom-header-view.h  custom-plain-text-edit.cpp  custom-plain-text-edit.h  custom-text-browser.cpp  custom-text-browser.h  filter-menu.cpp  filter-menu.h  package-table.cpp  package-table.h
src/: CMakeLists.txt  category-side-bar.cpp  category-side-bar.h  main.cpp
translations/: CMakeLists.txt  kiran-control-panel.bo_CN.ts  kiran-control-panel.kk_KG.ts  kiran-control-panel.kk_KZ.ts  kiran-control-panel.mn_MN.ts  kiran-control-panel.ug_CN.ts  kiran-control-panel.zh_CN.ts
(+14 files in other folders)
