add_subdirectory(account)
add_subdirectory(appearance)
add_subdirectory(application)
add_subdirectory(audio)
add_subdirectory(authentication)
add_subdirectory(display)
add_subdirectory(group)
add_subdirectory(keybinding)
add_subdirectory(keyboard)
add_subdirectory(mouse)
add_subdirectory(network)
add_subdirectory(power)
add_subdirectory(system)
add_subdirectory(timedate)
add_subdirectory(upgrade)
